syntax = "proto3";
package model;

message Auction {
    enum State {
        IDLE = 0;
        RUNNING = 1;
        CLOSED = 2;
    }
    string id = 1;
    State state = 2;
    repeated Lot lots = 3;
}

message Lot {
    string id = 1;
    int32 number = 2;
    int64 current_bid = 3;
    string leader = 4;
}